fix: fix adverts align

--- a/src/features/popularAdverts/popularAdverts.scss
+++ b/src/features/popularAdverts/popularAdverts.scss
@@ -100,22 +100,24 @@
             .adverts-list {
                 width: 100%;
                 display: grid;
-                grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+                //grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+                grid-template-columns: repeat(4, 1fr);
                 gap: 1rem;
                 margin: 20px auto;
+                justify-content: space-between;
                 justify-items: center;
                 .adverts-cart {
                     margin: 0 auto;
                     cursor: pointer;
                     font-size: 18px;
                     font-weight: 700;
-                    width: 190px;
-                    height: 264px;
+                    width: auto;
+                    height: auto;
                     background-color: var(--main-background);
                     border-radius: 1rem;
                     border: none;
                     img {
-                        width: 190px;
+                        width: 100%;
                         height: 140px;
                         border-radius: 16px 16px 0 0;
                         border: none;
@@ -148,6 +150,19 @@
     .popular-adverts {
         .popular-adverts-wrapper {
             width: 93.5%;
+            .adverts-list {
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .popular-adverts {
+        .popular-adverts-wrapper {
+            .adverts-list {
+                grid-template-columns: repeat(2, 1fr);
+            }
         }
     }
 }
@@ -160,13 +175,9 @@
                 text-align: center;
             }
             .adverts-list {
-                grid-template-columns: 1fr 1fr;
                 gap: 0.75rem;
                 .adverts-cart {
-                    width: 150px;
-                    height: 250px;
                     img {
-                        width: 150px;
                         height: 130px;
                         border-radius: 12px 12px 0 0;
                     }
@@ -200,10 +211,7 @@
                 grid-template-columns: 1fr 1fr;
                 gap: 0.75rem;
                 .adverts-cart {
-                    width: 130px;
-                    height: 250px;
                     img {
-                        width: 130px;
                         height: 130px;
                         border-radius: 8px 8px 0 0;
                     }
